--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -338,45 +338,55 @@ tile.lc:dt_label3199.name=SCP-3199 Label
 tile.lc:dt_label268.name=SCP-268 Label
 
 entity.lc:dt_officer.name=Security Officer
-item.spawn_egg.entity.lc:dt_officer.name=Spawn Security Officer §7#dt_foundation
+item.spawn_egg.entity.lc:dt_officer.name=Spawn Security Officer 
 entity.lc:dt_class_d.name=Class-D
-item.spawn_egg.entity.lc:dt_class_d.name=Spawn Class-D Personnel §7#dt_chaos
+item.spawn_egg.entity.lc:dt_class_d.name=Spawn Class-D Personnel
 entity.lc:dt_scientist.name=Scientist
-item.spawn_egg.entity.lc:dt_scientist.name=Spawn Scientist §7#dt_foundation
+item.spawn_egg.entity.lc:dt_scientist.name=Spawn Scientist 
+
 entity.lc:dt_epsilon11.name=Nine-Tailed Fox
-item.spawn_egg.entity.lc:dt_epsilon11.name=Spawn MTF Epsilon-11 "Nine-Tailed Fox" §7#dt_foundation
-entity.lc:dt_epsilon11_commander.name=Nine-Tailed Fox Commander
-item.spawn_egg.entity.lc:dt_epsilon11_commander.name=Spawn MTF Epsilon-11 "Nine-Tailed Fox" Commander §7#dt_foundation
-entity.lc:dt_epsilon11_apache.name=Epsilon-11 Apache
-item.spawn_egg.entity.lc:dt_epsilon11_apache.name=Spawn Epsilon-11 Apache §7#dt_foundation
+item.spawn_egg.entity.lc:dt_epsilon11.name=Spawn MTF Epsilon-11 "Nine-Tailed Fox" 
+entity.lc:dt_epsilon11c.name=Nine-Tailed Fox Commander
+item.spawn_egg.entity.lc:dt_epsilon11c.name=§lSpawn MTF Epsilon-11 "Nine-Tailed Fox" Commander 
+entity.lc:dt_eta10c.name=See No Evil Commander
+item.spawn_egg.entity.lc:dt_eta10c.name=§lSpawn MTF Eta-10 "See No Evil" Commander 
+entity.lc:dt_nu7c.name=Hammer Down Commander
+item.spawn_egg.entity.lc:dt_nu7c.name=§lSpawn MTF Nu-7 "Hammer Down" Commander 
+entity.lc:dt_beta7c.name=Mazz Hatters Commander
+item.spawn_egg.entity.lc:dt_beta7c.name=§e§lSpawn MTF beta-7 "Mazz Hatters" Commander 
+entity.lc:dt_epsilon6c.name=Village Idiots Commander
+item.spawn_egg.entity.lc:dt_epsilon6c.name=§lSpawn MTF Epsilon-6 "Village Idiots" Commander 
 entity.lc:dt_eta10.name=See No Evil
-item.spawn_egg.entity.lc:dt_eta10.name=Spawn MTF Eta-10 "See No Evil" §7#dt_foundation
+item.spawn_egg.entity.lc:dt_eta10.name=Spawn MTF Eta-10 "See No Evil" 
+
+entity.lc:dt_epsilon11_apache.name=Epsilon-11 Apache
+item.spawn_egg.entity.lc:dt_epsilon11_apache.name=Spawn Epsilon-11 Apache 
 entity.lc:dt_eta10_squad.name=See No Evil team
-item.spawn_egg.entity.lc:dt_eta10_squad.name=Spawn MTF Eta-10 "See No Evil" Squad §7#dt_foundation
+item.spawn_egg.entity.lc:dt_eta10_squad.name=Spawn MTF Eta-10 "See No Evil" Squad 
 entity.lc:dt_m249_turret.name=M249 Turret
-item.spawn_egg.entity.lc:dt_m249_turret.name=Spawn M249 Turret §7#dt_foundation
+item.spawn_egg.entity.lc:dt_m249_turret.name=Spawn M249 Turret 
 entity.lc:dt_tactical_response_officer.name=Tactical Response Officer
-item.spawn_egg.entity.lc:dt_tactical_response_officer.name=Spawn Tactical Response Officer §7#dt_foundation
+item.spawn_egg.entity.lc:dt_tactical_response_officer.name=Spawn Tactical Response Officer 
 entity.lc:dt_tactical_response_officer_shotgun.name=Tactical Response Officer
-item.spawn_egg.entity.lc:dt_tactical_response_officer_shotgun.name=Spawn Tactical Response Officer (Shotgun) §7#dt_foundation
+item.spawn_egg.entity.lc:dt_tactical_response_officer_shotgun.name=Spawn Tactical Response Officer (Shotgun) 
 entity.lc:dt_cd_commander.name=§0§lChaos Delta Commander
-item.spawn_egg.entity.lc:dt_cd_commander.name=§0§lSpawn Chaos Delta Commander #dt_chaos
+item.spawn_egg.entity.lc:dt_cd_commander.name=§0§lSpawn Chaos Delta Commander
 entity.lc:dt_cd_leader.name=§2§lChaos Delta Leader
-item.spawn_egg.entity.lc:dt_cd_leader.name=§2§lSpawn Chaos Delta Leader #dt_chaos
+item.spawn_egg.entity.lc:dt_cd_leader.name=§2§lSpawn Chaos Delta Leader
 entity.lc:dt_cd.name=§a§lChaos Delta Member
-item.spawn_egg.entity.lc:dt_cd.name=§a§lSpawn Chaos Delta Member #dt_chaos
+item.spawn_egg.entity.lc:dt_cd.name=§a§lSpawn Chaos Delta Member
 entity.lc:dt_chaos_insurgency.name=Chaos Insurgency
-item.spawn_egg.entity.lc:dt_chaos_insurgency.name=Spawn Chaos Insurgency §7#dt_chaos
+item.spawn_egg.entity.lc:dt_chaos_insurgency.name=Spawn Chaos Insurgency
 entity.lc:dt_scp106_container.name=SCP-106 Container
-item.spawn_egg.entity.lc:dt_scp106_container.name=Spawn SCP-106 Container §7#dt_scp_feature
+item.spawn_egg.entity.lc:dt_scp106_container.name=Spawn SCP-106 Container
 entity.lc:dt_o5_member.name=O5 Council Member
-item.spawn_egg.entity.lc:dt_o5_member.name=Spawn O5 Council Member §7#dt_foundation
+item.spawn_egg.entity.lc:dt_o5_member.name=Spawn O5 Council Member 
 entity.lc:dt_janitor.name=Janitor
-item.spawn_egg.entity.lc:dt_janitor.name=Spawn Janitor §7#dt_foundation
+item.spawn_egg.entity.lc:dt_janitor.name=Spawn Janitor 
 entity.lc:dt_field_doctor.name=Field Doctor
-item.spawn_egg.entity.lc:dt_field_doctor.name=Spawn Field Doctor §7#dt_foundation
+item.spawn_egg.entity.lc:dt_field_doctor.name=Spawn Field Doctor 
 entity.lc:dt_nu7.name=Hammer Down
-item.spawn_egg.entity.lc:dt_nu7.name=Spawn MTF Nu-7 "Hammer Down" §7#dt_foundation
+item.spawn_egg.entity.lc:dt_nu7.name=Spawn MTF Nu-7 "Hammer Down" 
 entity.lc:dt_beta7.name=Maz Hatters
 item.spawn_egg.entity.lc:dt_beta7.name=§g§lSpawn MTF Beta-7 "Maz Hatters"
 entity.lc:dt_epsilon6.name=Village Idiots
@@ -392,7 +402,7 @@ item.spawn_egg.entity.lc:dt_alpha1c.name=§d§lSpawn MTF Delta-1 "Purple Left Ha
 entity.lc:dt_alpha1l.name=§4§lAlpha-1 Leader
 item.spawn_egg.entity.lc:dt_alpha1l.name=§4§lSpawn MTF Alpha-1 "Red Right Hand" Leader
 entity.lc:dt_guard_turret.name=Guard Turret
-item.spawn_egg.entity.lc:dt_guard_turret.name=Spawn SCP Foundation Guard Turret §7#dt_foundation
+item.spawn_egg.entity.lc:dt_guard_turret.name=Spawn SCP Foundation Guard Turret 
 entity.lc:dt_goc_soldier.name=G.O.C. Soldier
 item.spawn_egg.entity.lc:dt_goc_soldier.name=Spawn G.O.C. Soldier §7#dt_goc
 entity.lc:dt_goc_dog.name=D.O.G.
@@ -488,7 +498,7 @@ item.spawn_egg.entity.lc:dt_scp966.name=Spawn SCP-966 "Sleep Killer" §7#dt_scp
 entity.lc:dt_blood.name=Blood
 entity.lc:dt_scp173_excrement.name=peanut's poop
 entity.lc:dt_epsilon11_apache_combat.name=Boeing AH-64D Apache
-item.spawn_egg.entity.lc:dt_epsilon11_apache_combat.name=Spawn Combat Epsilon-11 Apache §7#dt_foundation
+item.spawn_egg.entity.lc:dt_epsilon11_apache_combat.name=Spawn Combat Epsilon-11 Apache 
 entity.lc:dt_scp3199.name=SCP-3199
 item.spawn_egg.entity.lc:dt_scp3199.name=Spawn SCP-3199 "Humans, Refuted" §7#dt_scp
 entity.lc:dt_scp_redacted.name=[REDACTED]
