--- a/texts/en_US.lang
+++ b/texts/en_US.lang
@@ -345,19 +345,19 @@ entity.lc:dt_scientist.name=Scientist
 item.spawn_egg.entity.lc:dt_scientist.name=Spawn Scientist 
 
 entity.lc:dt_epsilon11.name=Nine-Tailed Fox
-item.spawn_egg.entity.lc:dt_epsilon11.name=Spawn MTF Epsilon-11 "Nine-Tailed Fox" 
+item.spawn_egg.entity.lc:dt_epsilon11.name=Spawn MTF Epsilon-11 "Nine-Tailed Fox" (Soldier)
 entity.lc:dt_epsilon11c.name=Nine-Tailed Fox Commander
-item.spawn_egg.entity.lc:dt_epsilon11c.name=§lSpawn MTF Epsilon-11 "Nine-Tailed Fox" Commander 
+item.spawn_egg.entity.lc:dt_epsilon11c.name=§lSpawn MTF Epsilon-11 "Nine-Tailed Fox" Commander (Soldier)
 entity.lc:dt_eta10c.name=See No Evil Commander
-item.spawn_egg.entity.lc:dt_eta10c.name=§lSpawn MTF Eta-10 "See No Evil" Commander 
+item.spawn_egg.entity.lc:dt_eta10c.name=§lSpawn MTF Eta-10 "See No Evil" Commander (Soldier)
 entity.lc:dt_nu7c.name=Hammer Down Commander
-item.spawn_egg.entity.lc:dt_nu7c.name=§lSpawn MTF Nu-7 "Hammer Down" Commander 
+item.spawn_egg.entity.lc:dt_nu7c.name=§lSpawn MTF Nu-7 "Hammer Down" Commander (Soldier)
 entity.lc:dt_beta7c.name=Mazz Hatters Commander
-item.spawn_egg.entity.lc:dt_beta7c.name=§e§lSpawn MTF beta-7 "Mazz Hatters" Commander 
+item.spawn_egg.entity.lc:dt_beta7c.name=§e§lSpawn MTF beta-7 "Mazz Hatters" Commander (Soldier)
 entity.lc:dt_epsilon6c.name=Village Idiots Commander
-item.spawn_egg.entity.lc:dt_epsilon6c.name=§lSpawn MTF Epsilon-6 "Village Idiots" Commander 
+item.spawn_egg.entity.lc:dt_epsilon6c.name=§lSpawn MTF Epsilon-6 "Village Idiots" Commander (Soldier)
 entity.lc:dt_eta10.name=See No Evil
-item.spawn_egg.entity.lc:dt_eta10.name=Spawn MTF Eta-10 "See No Evil" 
+item.spawn_egg.entity.lc:dt_eta10.name=Spawn MTF Eta-10 "See No Evil" (Soldier)
 
 entity.lc:dt_epsilon11_apache.name=Epsilon-11 Apache
 item.spawn_egg.entity.lc:dt_epsilon11_apache.name=Spawn Epsilon-11 Apache 
@@ -370,13 +370,13 @@ item.spawn_egg.entity.lc:dt_tactical_response_officer.name=Spawn Tactical Respon
 entity.lc:dt_tactical_response_officer_shotgun.name=Tactical Response Officer
 item.spawn_egg.entity.lc:dt_tactical_response_officer_shotgun.name=Spawn Tactical Response Officer (Shotgun) 
 entity.lc:dt_cd_commander.name=§0§lChaos Delta Commander
-item.spawn_egg.entity.lc:dt_cd_commander.name=§0§lSpawn Chaos Delta Commander
+item.spawn_egg.entity.lc:dt_cd_commander.name=§0§lSpawn Chaos Delta Commander (Soldier)
 entity.lc:dt_cd_leader.name=§2§lChaos Delta Leader
-item.spawn_egg.entity.lc:dt_cd_leader.name=§2§lSpawn Chaos Delta Leader
+item.spawn_egg.entity.lc:dt_cd_leader.name=§2§lSpawn Chaos Delta Leader (Soldier)
 entity.lc:dt_cd.name=§a§lChaos Delta Member
-item.spawn_egg.entity.lc:dt_cd.name=§a§lSpawn Chaos Delta Member
+item.spawn_egg.entity.lc:dt_cd.name=§a§lSpawn Chaos Delta Member (Soldier)
 entity.lc:dt_chaos_insurgency.name=Chaos Insurgency
-item.spawn_egg.entity.lc:dt_chaos_insurgency.name=Spawn Chaos Insurgency
+item.spawn_egg.entity.lc:dt_chaos_insurgency.name=Spawn Chaos Insurgency (Soldier)
 entity.lc:dt_scp106_container.name=SCP-106 Container
 item.spawn_egg.entity.lc:dt_scp106_container.name=Spawn SCP-106 Container
 entity.lc:dt_o5_member.name=O5 Council Member
@@ -386,21 +386,21 @@ item.spawn_egg.entity.lc:dt_janitor.name=Spawn Janitor
 entity.lc:dt_field_doctor.name=Field Doctor
 item.spawn_egg.entity.lc:dt_field_doctor.name=Spawn Field Doctor 
 entity.lc:dt_nu7.name=Hammer Down
-item.spawn_egg.entity.lc:dt_nu7.name=Spawn MTF Nu-7 "Hammer Down" 
+item.spawn_egg.entity.lc:dt_nu7.name=Spawn MTF Nu-7 "Hammer Down" (Soldier)
 entity.lc:dt_beta7.name=Maz Hatters
-item.spawn_egg.entity.lc:dt_beta7.name=§g§lSpawn MTF Beta-7 "Maz Hatters"
+item.spawn_egg.entity.lc:dt_beta7.name=§g§lSpawn MTF Beta-7 "Maz Hatters" (Soldier)
 entity.lc:dt_epsilon6.name=Village Idiots
-item.spawn_egg.entity.lc:dt_epsilon6.name=§lSpawn MTF Epsilon-6 "Village Idiots"
+item.spawn_egg.entity.lc:dt_epsilon6.name=§lSpawn MTF Epsilon-6 "Village Idiots" (Soldier)
 entity.lc:dt_thedeath.name=§5§lDeath
-item.spawn_egg.entity.lc:dt_thedeath.name=§5§lSpawn MTF Delta-1 "Purple Left Hand" Death
+item.spawn_egg.entity.lc:dt_thedeath.name=§5§lSpawn MTF Delta-1 "Purple Left Hand" Death (Soldier)
 entity.lc:dt_chara.name=§c§lChara
-item.spawn_egg.entity.lc:dt_chara.name=§c§lSpawn MTF Delta-1 "Purple Left Hand" Chara
+item.spawn_egg.entity.lc:dt_chara.name=§c§lSpawn MTF Delta-1 "Purple Left Hand" Chara (Soldier)
 entity.lc:dt_alpha1.name=§4§lAlpha-1
-item.spawn_egg.entity.lc:dt_alpha1.name=§4§lSpawn MTF Alpha-1 "Red Right Hand"
+item.spawn_egg.entity.lc:dt_alpha1.name=§4§lSpawn MTF Alpha-1 "Red Right Hand" (Soldier)
 entity.lc:dt_alpha1c.name=§d§lDelta-1 Commander
-item.spawn_egg.entity.lc:dt_alpha1c.name=§d§lSpawn MTF Delta-1 "Purple Left Hand" Commander
+item.spawn_egg.entity.lc:dt_alpha1c.name=§d§lSpawn MTF Delta-1 "Purple Left Hand" Commander (Soldier)
 entity.lc:dt_alpha1l.name=§4§lAlpha-1 Leader
-item.spawn_egg.entity.lc:dt_alpha1l.name=§4§lSpawn MTF Alpha-1 "Red Right Hand" Leader
+item.spawn_egg.entity.lc:dt_alpha1l.name=§4§lSpawn MTF Alpha-1 "Red Right Hand" Leader (Soldier)
 entity.lc:dt_guard_turret.name=Guard Turret
 item.spawn_egg.entity.lc:dt_guard_turret.name=Spawn SCP Foundation Guard Turret 
 entity.lc:dt_goc_soldier.name=G.O.C. Soldier
